# AI-Chatbot

backend/: .env.sample  app.js  config.js  graph.py  helper.py  main.py  package.json  pyproject.toml
backend/controllers/: chatbot.js  conversationController.js  userController.js
backend/middleware/: errorHandler.js  multer.js  verifyJWT.js
backend/models/: conversationModel.js  messageModel.js  userModel.js
backend/routes/: chatbotRoutes.js  conversationRoutes.js  userRoutes.js
backend/utils/: ApiError.js  ApiResponse.js  asyncHandler.js  cloudinary.js
frontend/: .env.sample  index.html  jsconfig.json  package-lock.json  package.json
frontend/src/: App.jsx  AuthProvider.jsx  FileUploadButton.jsx  Messages.jsx  config.js  index.css  main.jsx
frontend/src/components/: AppSidebar.jsx  Chat.css  Chat.jsx  ChatArea.jsx  LoginButton.jsx  LoginForm.jsx  RegisterForm.jsx  UserInput.jsx  Welcome.jsx
frontend/src/components/ui/: avatar.jsx  card.jsx  textarea.jsx
frontend/src/hooks/: useAuth.jsx
frontend/src/lib/: api.js
python/: main.py  pyproject.toml  requirements.txt
python/src/: graph.py  helper.py
