[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "grandalf>=0.8",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.4",
    "langchain-redis>=0.2.3",
    "langgraph>=0.5.3",
    "langgraph-checkpoint-redis>=0.0.8",
    "pypdf>=5.9.0",
    "redisvl>=0.8.0",
    "sentence-transformers>=5.0.0",
]
